[vxb-bug-28] Fixing bootstrap columns on small devices

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -30,12 +30,15 @@
     padding-top: 40px;
     .halfColorBg;
     .left-col{
-      padding-right: 50px;
+      @media (min-width: 992px) {
+        padding-right: 50px;
+      }
     }
     .right-col{
-      padding-left: 50px;
+      @media (min-width: 992px) {
+        padding-left: 50px;
+      }
     }
-
   }
   .title{
     display: block;
