added correct instructions url to signup.jade
The current URL in the "To use your Voxbone account " went to "#"

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -75,7 +75,7 @@ block content
 
             #form_container
               p.
-                #[b Note:] the Voxbone WebRTC Free Trial will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please see #[a(href="#") view instructions]
+                #[b Note:] the Voxbone WebRTC Free Trial will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please see #[a(href="https://developers.voxbone.com/docs/webrtc/") view instructions]
 
               .formWrap
                 form#create_account(name="create_account" novalidate ng-controller="formController")
