--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,20 +14,20 @@ html(lang='en', ng-app="voxboneApp")
     link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.css", rel="stylesheet")
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
 
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.min.js")
 
     script(src="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js")
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
-    script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js")
+    script(src="/javascripts/voxbone-0.0.4.js")
 
     if process.env.GOOGLE_ANALYTICS_ID
       script.
@@ -81,4 +81,4 @@ html(lang='en', ng-app="voxboneApp")
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
           a(target="_blank" href="https://docs.google.com/document/d/1rj5O9hJnjlUAe64HeeNo-ZktNRFefseEc8QAF0-z44Y/edit?usp=sharing") Known Issues
           a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send feedback
-          a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2015, VOXBONE SA
+          a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA
