--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -12,12 +12,12 @@ html(lang='en', ng-app="voxboneApp")
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
 
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
-    script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js")
+    script(src="/javascripts/voxbone-0.0.4.js")
 
     script.
 
@@ -48,7 +48,7 @@ html(lang='en', ng-app="voxboneApp")
         },
         'progress': function (e) {
           console.log('Calling...');
-          sendPostMessage('setCallCalling');
+          //- sendPostMessage('setCallCalling');
         },
         'failed': function (e){
           console.log('Failed to connect: ' + e.cause);
@@ -65,6 +65,11 @@ html(lang='en', ng-app="voxboneApp")
         'getUserMediaFailed': function (e){
           console.log('Cannot get User Media');
           sendPostMessage('setCallFailedUserMedia');
+        },
+        'getUserMediaAccepted': function(e) {
+          sendPostMessage('setCallCalling');
+          console.log('local media accepted');
+          voxbone.Logger.loginfo("local media accepted");
         }
       };
 
