--- a/views/widget.jade
+++ b/views/widget.jade
@@ -85,6 +85,11 @@ block content
         $(".vw-animated-dots").addClass('hidden');
         $("#vw-in-call").addClass('hidden');
         $("#vw-unable-to-acces-mic").removeClass('hidden');
+      },
+      'getUserMediaAccepted': function(e) {
+        $("#audio-ringback-tone").trigger('play');
+        console.log('local media accepted');
+        voxbone.Logger.loginfo("local media accepted");
       }
     };
 
@@ -555,5 +560,5 @@ block content
                     .codebox-actions(ng-show='widget.showWidgetCode')
                       a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
                       a(href="#" class="hidden" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code
-  script(src="/javascripts/widget.js",type="application/javascript")
+  script(src="/javascripts/widget.js")
 
