--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -566,7 +566,6 @@ strong {
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
-  cursor: pointer;
   -webkit-user-select: none;
   background: #19a1f3;
   background: -webkit-linear-gradient(#19a1f3, #0b85ce);
@@ -582,6 +581,7 @@ strong {
   -ms-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
   -o-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  cursor: pointer !important;
 }
 .btn-style-a span {
   display: block;
@@ -620,7 +620,6 @@ strong {
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
-  cursor: pointer;
   -webkit-user-select: none;
   background: #92168e;
   background: -webkit-linear-gradient(#92168e, #660f63);
@@ -636,6 +635,7 @@ strong {
   -ms-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
   -o-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  cursor: pointer !important;
 }
 .btn-style-b span {
   display: block;
@@ -658,6 +658,60 @@ strong {
   background: -ms-linear-gradient(#660f63, #92168e);
   background: -o-linear-gradient(#660f63, #92168e);
   background: linear-gradient(#660f63, #92168e);
+}
+.btn-style-disabled {
+  max-width: 100%;
+  min-width: 140px;
+  display: inline-block;
+  border: 1px solid #cbcbcb;
+  padding: 0;
+  text-decoration: none;
+  font-size: 14px;
+  text-align: center;
+  line-height: 1.4;
+  font-weight: 700;
+  color: #ffffff;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  -webkit-user-select: none;
+  background: #cccccc;
+  background: -webkit-linear-gradient(#cccccc, #b3b3b3);
+  background: -moz-linear-gradient(#cccccc, #cccccc);
+  background: -ms-linear-gradient(#cccccc, #cccccc);
+  background: -o-linear-gradient(#cccccc, #cccccc);
+  background: linear-gradient(#cccccc, #b3b3b3);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  -ms-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  -o-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.16);
+  cursor: not-allowerd !important;
+}
+.btn-style-disabled span {
+  display: block;
+  padding: 10px 12px 12px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  text-shadow: 0px -1px #07619e;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-overflow: ellipsis;
+  display: inline-block;
+  vertical-align: top;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
+}
+.btn-style-disabled:hover {
+  background: -webkit-linear-gradient(#b3b3b3, #cccccc);
+  background: -moz-linear-gradient(#b3b3b3, #cccccc);
+  background: -ms-linear-gradient(#b3b3b3, #cccccc);
+  background: -o-linear-gradient(#b3b3b3, #cccccc);
+  background: linear-gradient(#b3b3b3, #cccccc);
 }
 .widget-box {
   position: relative;
@@ -716,7 +770,6 @@ strong {
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
-  cursor: pointer;
   -webkit-user-select: none;
   background: #19a1f3;
   background: -webkit-linear-gradient(#19a1f3, #0b85ce);
@@ -779,7 +832,6 @@ strong {
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
-  cursor: pointer;
   -webkit-user-select: none;
   background: #92168e;
   background: -webkit-linear-gradient(#92168e, #660f63);
