--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -17,6 +17,7 @@
   white-space: nowrap;
   vertical-align: middle;
   touch-action: manipulation;
+  cursor: pointer;
   -webkit-user-select: none;
 
   background: @btn-color;
@@ -53,15 +54,9 @@
 }
 .btn-style-a{
   .btn-widget(#19a1f3);
-  cursor: pointer !important;
 }
 .btn-style-b{
   .btn-widget(#92168e);
-  cursor: pointer !important;
-}
-.btn-style-disabled {
-  .btn-widget(#cccccc);
-  cursor: not-allowerd !important;
 }
 
 .widget-box{
@@ -91,6 +86,7 @@
       background-repeat: no-repeat;
     }
   }
+
   .btn-style{
     display: inline-block;
     padding-left:10px;
@@ -127,4 +123,8 @@
       }
     }
   }
+}
+
+.btn-style-disabled {
+  cursor: not-allowed !important;
 }
