--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,20 +9,20 @@ html(lang='en', ng-app="voxboneApp")
     link(rel="apple-touch-icon" href="")
     link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.png")
 
-    link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
+    link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
-    link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.css", rel="stylesheet")
+    link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.min.css", rel="stylesheet")
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
-    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
 
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.min.js")
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.min.js")
 
     script(src="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.min.js")
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
     script(src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js")
 
