--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -58,7 +58,9 @@ html(lang='en', ng-app="voxboneApp")
         },
         'authExpired': function (e){
           console.log('Auth Expired!');
-          voxbone.WebRTC.init(#{voxrtc_config});
+          $scope.getVoxrtcConfig(function(data) {
+            voxbone.WebRTC.init(data)
+          });
         }
       };
 
@@ -66,6 +68,13 @@ html(lang='en', ng-app="voxboneApp")
         .controller('VoxboneWidgetController', ['$scope', '$http', '$window', function($scope, $http, $window){
 
           $scope.master = { };
+
+          $scope.getVoxrtcConfig = function (callback) {
+            $.get('/token_config', function(data){
+              eval("var token_config = " + data);
+              callback(token_config);
+            });
+          }
 
           $scope.init = function () {
             voxbone.WebRTC.configuration.post_logs = true;
