--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app="voxboneApp")
+html(lang='en')
   head
     if process.env.NEW_RELIC_LICENSE_KEY
       != newrelic.getBrowserTimingHeader()
@@ -14,20 +14,12 @@ html(lang='en', ng-app="voxboneApp")
     link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.min.css", rel="stylesheet")
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
-    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
-
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.min.js")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.min.js")
-
-    script(src="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.min.js")
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js")
-
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
     script(src="/javascripts/voxbone-0.0.4.js")
+
+    //- load requirejs and its config
+    script(data-main="config.js" src="lib/requirejs/require.js")
 
     if process.env.GOOGLE_ANALYTICS_ID
       script.
