--- a/views/login.jade
+++ b/views/login.jade
@@ -2,50 +2,49 @@ extends layout
 
 block content
   script.
-    require(
-      ['angular', 'angular-cookies', 'clipboard', 'jquery', 'bootstrap', 'jquery.qtip'],
-      function(angular, ngCookies, Clipboard, $) {
-        var loginApp = angular.module('voxboneApp', []);
-        loginApp.controller('LoginController', ['$scope', '$http', '$window', function($scope, $http, $window){
-          $scope.master = {};
+    require(['angular', 'jquery'], function (angular, $) {
+      var loginApp = angular.module('voxboneApp', []);
 
-          $scope.update = function(login){
-            $scope.master = angular.copy(login);
-          };
+      loginApp.controller('LoginController', ['$scope', '$http', '$window', function ($scope, $http, $window) {
+        $scope.master = {};
 
-          $scope.reset = function(form){
-            if(form){
-              form.$setPristine();
-              form.$setUntouched();
-            }
-            $scope.login = angular.copy($scope.master);
-          };
+        $scope.update = function (login) {
+          $scope.master = angular.copy(login);
+        };
 
-          $scope.reset();
-
-          $scope.login.processForm = function(){
-            console.log("--> Submitting...");
-            var req = {
-              method: 'POST',
-              url: '/login',
-              headers: {
-                'Content-Type': 'application/json; charset=utf-8'
-              },
-              data: {
-                email: $scope.login.uemail,
-                password: $scope.login.upassword
-              }
-            };
-            $http(req)
-              .then(function successCallback(response){
-                $window.location.href = response.data.redirect;
-              }, function errorCallback(response){
-                $("#alert").removeClass('hidden');
-              });
+        $scope.reset = function (form) {
+          if (form) {
+            form.$setPristine();
+            form.$setUntouched();
           }
-        }]);
+          $scope.login = angular.copy($scope.master);
+        };
 
-        angular.bootstrap(document, ['voxboneApp']);
+        $scope.reset();
+
+        $scope.login.processForm = function () {
+          console.log("--> Submitting...");
+          var req = {
+            method: 'POST',
+            url: '/login',
+            headers: {
+              'Content-Type': 'application/json; charset=utf-8'
+            },
+            data: {
+              email: $scope.login.uemail,
+              password: $scope.login.upassword
+            }
+          };
+          $http(req)
+            .then(function successCallback(response){
+              $window.location.href = response.data.redirect;
+            }, function errorCallback(response){
+              $("#alert").removeClass('hidden');
+            });
+        }
+      }]);
+
+      angular.bootstrap(document, ['voxboneApp']);
     });
   .main.registerPage
     .body
