--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,8 +19,8 @@ html(lang='en')
     script(src="/javascripts/voxbone-0.0.4.js")
 
     //- load requirejs and its config
-    script(src="lib/requirejs/require.js")
-    script(src="config.js")
+    script(src="/lib/requirejs/require.js")
+    script(src="/config.js")
 
     if process.env.GOOGLE_ANALYTICS_ID
       script.
