--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,8 +15,8 @@ html(lang='en')
     link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
-    script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
-    script(src="/javascripts/voxbone-0.0.4.js")
+    script(src="//webrtc.voxbone.com/js/jssip-latest.js ")
+    script(src="//webrtc.voxbone.com/js/voxbone-latest.js")
 
     //- load requirejs and its config
     script(src="/lib/requirejs/require.js")
