--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -15,9 +15,8 @@ html(lang='en', ng-app="voxboneApp")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
-
-    script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
-    script(src="/javascripts/voxbone-0.0.4.js")
+    script(src="//webrtc.voxbone.com/js/jssip-latest.js ")
+    script(src="//webrtc.voxbone.com/js/voxbone-latest.js")
 
     script.
       function sendPostMessage(action, value){
